canary-deployment/without-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: without-deployment
  namespace: canary-ns
  labels:
    app: online-shop
    version: v1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: online-shop
  template:
    metadata:
      labels:
        app: online-shop
    spec:
      containers:
        - image: amitabhdevops/online_shop_without_footer
          name: online-shop
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
