canary-deployment/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  namespace: canary-ns
spec:
  selector:
    app: online-shop
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
