canary-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: canary-ingress
  namespace: canary-ns
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-svc
            port:
              number: 3000
